--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
             <h2><span>Lu</span>Hum</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
             <div>
-              <a href="#menu" class="btn-get-started">Our Menu</a>
-              <a href="#book-a-table" class="btn-get-started">Book a table</a>
+              <a href="#about" class="btn-get-started">Ver más</a>
+              <a href="#events" class="btn-get-started">Eventos</a>
             </div>
           </div>
         </div><!-- End Carousel Item -->
@@ -104,8 +104,8 @@
               <h2><span>Lu</span>Hum</h2>
               <p>Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut.</p>
               <div>
-                  <a href="#menu" class="btn-get-started">Our Menu</a>
-                  <a href="#book-a-table" class="btn-get-started">Book a table</a>
+                  <a href="#about" class="btn-get-started">Ver más</a>
+                  <a href="#events" class="btn-get-started">Eventos</a>
               </div>
           </div>
         </div><!-- End Carousel Item -->
@@ -116,8 +116,8 @@
               <h2><span>Lu</span>Hum</h2>
             <p>Beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt omnis iste natus error sit voluptatem accusantium.</p>
             <div>
-              <a href="#menu" class="btn-get-started">Our Menu</a>
-              <a href="#book-a-table" class="btn-get-started">Book a table</a>
+                <a href="#about" class="btn-get-started">Ver más</a>
+                <a href="#events" class="btn-get-started">Eventos</a>
             </div>
           </div>
         </div><!-- End Carousel Item -->
@@ -381,7 +381,7 @@
         <div class="col-lg-3 col-md-6 d-flex">
           <i class="bi bi-geo-alt icon"></i>
           <div class="address">
-            <h4>Address</h4>
+            <h4>Dirección</h4>
             <p>A108 Adam Street</p>
             <p>New York, NY 535022</p>
             <p></p>
@@ -392,7 +392,7 @@
         <div class="col-lg-3 col-md-6 d-flex">
           <i class="bi bi-telephone icon"></i>
           <div>
-            <h4>Contact</h4>
+            <h4>Contacto</h4>
             <p>
               <strong>Phone:</strong> <span>+1 5589 55488 55</span><br>
               <strong>Email:</strong> <span>info@example.com</span><br>
@@ -403,7 +403,7 @@
         <div class="col-lg-3 col-md-6 d-flex">
           <i class="bi bi-clock icon"></i>
           <div>
-            <h4>Opening Hours</h4>
+            <h4>Horario</h4>
             <p>
               <strong>Mon-Sat:</strong> <span>11AM - 23PM</span><br>
               <strong>Sunday</strong>: <span>Closed</span>
@@ -412,7 +412,7 @@
         </div>
 
         <div class="col-lg-3 col-md-6">
-          <h4>Follow Us</h4>
+          <h4>Síguenos</h4>
           <div class="social-links d-flex">
             <a href="#" class="twitter"><i class="bi bi-twitter-x"></i></a>
             <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
@@ -425,7 +425,7 @@
     </div>
 
     <div class="container copyright text-center mt-4">
-      <p> <strong class="px-1 sitename">Delicious</strong> </p>
+      <p> <strong class="px-1 sitename">Luhum</strong> </p>
       <div class="credits">
          Última actualización Noviembre 2024
       </div>
