cambio de fotos

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
     <!-- Events Section -->
     <section id="events" class="events section">
 
-      <img class="slider-bg" src="assets/img/events-bg.jpg" alt="" data-aos="fade-in">
+      <img class="slider-bg" src="assets/img/Miotato/5.png" alt="" data-aos="fade-in">
 
       <div class="container">
 
@@ -197,7 +197,7 @@
             <div class="swiper-slide">
               <div class="row gy-4 event-item">
                 <div class="col-lg-6">
-                  <img src="assets/img/events-slider/events-slider-1.jpg" class="img-fluid" alt="">
+                  <img src="assets/img/Miotato/2(2).png" class="img-fluid" alt="">
                 </div>
                 <div class="col-lg-6 pt-4 pt-lg-0 content">
                   <h3>Birthday Parties</h3>
@@ -224,7 +224,7 @@
             <div class="swiper-slide">
               <div class="row gy-4 event-item">
                 <div class="col-lg-6">
-                  <img src="assets/img/events-slider/events-slider-2.jpg" class="img-fluid" alt="">
+                  <img src="assets/img/Miotato/f.jpg" class="img-fluid" alt="">
                 </div>
                 <div class="col-lg-6 pt-4 pt-lg-0 content">
                   <h3>Private Parties</h3>
@@ -251,7 +251,7 @@
             <div class="swiper-slide">
               <div class="row gy-4 event-item">
                 <div class="col-lg-6">
-                  <img src="assets/img/events-slider/events-slider-3.jpg" class="img-fluid" alt="">
+                  <img src="assets/img/Miotato/d.jpg" class="img-fluid" alt="">
                 </div>
                 <div class="col-lg-6 pt-4 pt-lg-0 content">
                   <h3>Custom Parties</h3>
@@ -290,8 +290,8 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>Gallery</h2>
-        <div><span>Some photos from</span> <span class="description-title">Our Restaurant</span></div>
+        <h2>Galería</h2>
+        <div><span>Sabor que te</span> <span class="description-title">abraza</span></div>
       </div><!-- End Section Title -->
 
       <div class="container-fluid" data-aos="fade-up" data-aos-delay="100">
@@ -300,64 +300,64 @@
 
           <div class="col-lg-3 col-md-4">
             <div class="gallery-item">
-              <a href="assets/img/gallery/gallery-1.jpg" class="glightbox" data-gallery="images-gallery">
-                <img src="assets/img/gallery/gallery-1.jpg" alt="" class="img-fluid">
+              <a href="assets/img/Miotato/1(1).png" class="glightbox" data-gallery="images-gallery">
+                <img src="assets/img/Miotato/1(1).png" alt="" class="img-fluid">
               </a>
             </div>
           </div><!-- End Gallery Item -->
 
           <div class="col-lg-3 col-md-4">
             <div class="gallery-item">
-              <a href="assets/img/gallery/gallery-2.jpg" class="glightbox" data-gallery="images-gallery">
-                <img src="assets/img/gallery/gallery-2.jpg" alt="" class="img-fluid">
+              <a href="assets/img/Miotato/3(1).png" class="glightbox" data-gallery="images-gallery">
+                <img src="assets/img/Miotato/3(1).png" alt="" class="img-fluid">
               </a>
             </div>
           </div><!-- End Gallery Item -->
 
           <div class="col-lg-3 col-md-4">
             <div class="gallery-item">
-              <a href="assets/img/gallery/gallery-3.jpg" class="glightbox" data-gallery="images-gallery">
-                <img src="assets/img/gallery/gallery-3.jpg" alt="" class="img-fluid">
+              <a href="assets/img/Miotato/4(1).png" class="glightbox" data-gallery="images-gallery">
+                <img src="assets/img/Miotato/4(1).png" alt="" class="img-fluid">
               </a>
             </div>
           </div><!-- End Gallery Item -->
 
           <div class="col-lg-3 col-md-4">
             <div class="gallery-item">
-              <a href="assets/img/gallery/gallery-4.jpg" class="glightbox" data-gallery="images-gallery">
-                <img src="assets/img/gallery/gallery-4.jpg" alt="" class="img-fluid">
+              <a href="assets/img/Miotato/cuer.jpg" class="glightbox" data-gallery="images-gallery">
+                <img src="assets/img/Miotato/cuer.jpg" alt="" class="img-fluid">
               </a>
             </div>
           </div><!-- End Gallery Item -->
 
           <div class="col-lg-3 col-md-4">
             <div class="gallery-item">
-              <a href="assets/img/gallery/gallery-5.jpg" class="glightbox" data-gallery="images-gallery">
-                <img src="assets/img/gallery/gallery-5.jpg" alt="" class="img-fluid">
+              <a href="assets/img/Miotato/cc.jpg" class="glightbox" data-gallery="images-gallery">
+                <img src="assets/img/Miotato/cc.jpg" alt="" class="img-fluid">
               </a>
             </div>
           </div><!-- End Gallery Item -->
 
           <div class="col-lg-3 col-md-4">
             <div class="gallery-item">
-              <a href="assets/img/gallery/gallery-6.jpg" class="glightbox" data-gallery="images-gallery">
-                <img src="assets/img/gallery/gallery-6.jpg" alt="" class="img-fluid">
+              <a href="assets/img/Miotato/R.jpg" class="glightbox" data-gallery="images-gallery">
+                <img src="assets/img/Miotato/R.jpg" alt="" class="img-fluid">
               </a>
             </div>
           </div><!-- End Gallery Item -->
 
           <div class="col-lg-3 col-md-4">
             <div class="gallery-item">
-              <a href="assets/img/gallery/gallery-7.jpg" class="glightbox" data-gallery="images-gallery">
-                <img src="assets/img/gallery/gallery-7.jpg" alt="" class="img-fluid">
+              <a href="assets/img/Miotato/mol.jpg" class="glightbox" data-gallery="images-gallery">
+                <img src="assets/img/Miotato/mol.jpg" alt="" class="img-fluid">
               </a>
             </div>
           </div><!-- End Gallery Item -->
 
           <div class="col-lg-3 col-md-4">
             <div class="gallery-item">
-              <a href="assets/img/gallery/gallery-8.jpg" class="glightbox" data-gallery="images-gallery">
-                <img src="assets/img/gallery/gallery-8.jpg" alt="" class="img-fluid">
+              <a href="assets/img/Miotato/R (12).jpg" class="glightbox" data-gallery="images-gallery">
+                <img src="assets/img/Miotato/R (12).jpg" alt="" class="img-fluid">
               </a>
             </div>
           </div><!-- End Gallery Item -->
@@ -366,7 +366,7 @@
 
       </div>
 
-    </section><!-- /Gallery Section -->
+    </section><!-- /Miotato Section -->
 
 
 
