--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <a href="index.html" class="logo d-flex align-items-center">
           <!-- Uncomment the line below if you also wish to use an image logo -->
           <!-- <img src="assets/img/logo.png" alt=""> -->
-          <h1 class="sitename">Luhum</h1>
+          <h1 class="sitename"><img src="assets/img/Miotato/logo3.png" alt=""></h1>
         </a>
 
         <nav id="navmenu" class="navmenu">
@@ -87,10 +87,10 @@
       <div id="hero-carousel" class="carousel slide carousel-fade" data-bs-ride="carousel" data-bs-interval="5000">
 
         <div class="carousel-item active">
-          <img src="assets/img/Miotato/7.png" alt="">
+          <img src="assets/img/Miotato/A11.jpg" alt="">
           <div class="carousel-container">
             <h2><span>Lu</span>Hum</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <p>   Bienvenido a LuHum <br /> <br />"Cada evento es una historia que contar. Nosotros nos encargamos de escribirla, con atención a cada detalle y un toque de magia.".<br /> </p>
             <div>
               <a href="#about" class="btn-get-started">Ver más</a>
               <a href="#events" class="btn-get-started">Eventos</a>
@@ -102,7 +102,13 @@
           <img src="assets/img/Miotato/4.png" alt="">
           <div class="carousel-container">
               <h2><span>Lu</span>Hum</h2>
-              <p>Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut.</p>
+              <p>
+                  ¡Bienvenidos! <br /> <br />
+                  Nos alegra tenerte aquí. En LuHum, transformamos tus ideas en momentos inolvidables. Nos especializamos en la planificación y ejecución de eventos que van desde lo más pequeño hasta lo más grande, poniendo atención a cada detalle para que tu celebración sea única.
+                  Ya sea que necesites un menú delicioso, una ambientación espectacular, decoración creativa o todo lo que implique llevar tu evento a otro nivel, estamos aquí para hacerlo realidad. Nos encargamos de todo: desde la elección de la comida que sorprenderá a tus invitados, hasta los elementos decorativos que harán de tu evento un lugar mágico.
+                 <br /> Cada evento es una nueva oportunidad para crear experiencias memorables. Permítenos ser parte de tu historia y hacer que tu evento sea tan especial como siempre lo soñaste.
+                  <br /><br />Contáctanos hoy y empecemos a planear juntos el evento perfecto!
+              </p>
               <div>
                   <a href="#about" class="btn-get-started">Ver más</a>
                   <a href="#events" class="btn-get-started">Eventos</a>
@@ -111,10 +117,10 @@
         </div><!-- End Carousel Item -->
 
         <div class="carousel-item">
-          <img src="assets/img/Miotato/2.png" alt="">
+          <img src="assets/img/Miotato/A1.jpg" alt="">
           <div class="carousel-container">
               <h2><span>Lu</span>Hum</h2>
-            <p>Beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt omnis iste natus error sit voluptatem accusantium.</p>
+            <p>Deseamos ser tu mejor opción y que puedas encontrar todo lo que buscas..</p>
             <div>
                 <a href="#about" class="btn-get-started">Ver más</a>
                 <a href="#events" class="btn-get-started">Eventos</a>
@@ -143,24 +149,20 @@
 
         <div class="row gy-4">
             <div class="col-lg-6 position-relative align-self-start" data-aos="fade-up" data-aos-delay="100">
-                <img src="assets/img/Miotato/9.png" class="img-fluid" alt="">
+                <img src="assets/img/Miotato/A12.jpg" class="img-fluid" alt="">
                 <!--<a href="https://www.youtube.com/watch?v=Y7f98aduVJ8" class="glightbox pulsating-play-btn"></a>-->
             </div>
           <div class="col-lg-6 content" data-aos="fade-up" data-aos-delay="200">
-            <h3>Voluptatem dignissimos provident quasi corporis voluptates sit assumenda.</h3>
+            <h3>¿Qué es lo que nos distigue de los demás?.</h3>
             <p class="fst-italic">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
+              Para LuHum es importante que puedas encontrar tu mejor opción en nosotros, por ello te describimos el porque somos tu mejor opción
             </p>
             <ul>
-              <li><i class="bi bi-check2-all"></i> <span>Ullamco laboris nisi ut aliquip ex ea commodo consequat.</span></li>
-              <li><i class="bi bi-check2-all"></i> <span>Duis aute irure dolor in reprehenderit in voluptate velit.</span></li>
-              <li><i class="bi bi-check2-all"></i> <span>Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate trideta storacalaperda mastiro dolore eu fugiat nulla pariatur.</span></li>
+              <li><i class="bi bi-check2-all"></i> <span>Personalización y Creatividad: Nos tomamos el tiempo para conocer las necesidades que requiere nuestro cliente, plasmando ideas hasta encontrar la cual nos lleve a un evento completamente personalizado y original.</span></li>
+              <li><i class="bi bi-check2-all"></i> <span>Calidad y Variedad de Proveedores: Nos destacamos por tener una red sólida de proveedores desde catering hasta decoración y equipo técnicos, todo esto para impactar directamente en la experiencia del evento.</span></li>
+              <li><i class="bi bi-check2-all"></i> <span>Capacidad de Adaptación y Flexibilidad: A diferencias de otras organizaciones nosotros nos adaptamos a diferentes tipos de eventos, presupuestos y estilos, incluyendo cambios de última hora </span></li>
             </ul>
-            <p>
-              Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-              velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident
-            </p>
+            
           </div>
         </div>
 
@@ -200,23 +202,22 @@
                   <img src="assets/img/Miotato/2(2).png" class="img-fluid" alt="">
                 </div>
                 <div class="col-lg-6 pt-4 pt-lg-0 content">
-                  <h3>Birthday Parties</h3>
+                  <h3>Eventos Personalizados</h3>
                   <div class="price">
-                    <p><span>$189</span></p>
+                    
                   </div>
                   <p class="fst-italic">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-                    magna aliqua.
+                    Nos caracterizamos por cubir eventos como:
                   </p>
                   <ul>
-                    <li><i class="bi bi-check2-circle"></i> <span>Ullamco laboris nisi ut aliquip ex ea commodo consequat.</span></li>
-                    <li><i class="bi bi-check2-circle"></i> <span>Duis aute irure dolor in reprehenderit in voluptate velit.</span></li>
-                    <li><i class="bi bi-check2-circle"></i> <span>Ullamco laboris nisi ut aliquip ex ea commodo consequat.</span></li>
+                    <li><i class="bi bi-check2-circle"></i> <span>Eventos Coporativos.</span></li>
+                    <li><i class="bi bi-check2-circle"></i> <span>Eventos Sociales y Celebraciones (bodas,cumpleaños,aniversarios,graduaciones,etc).</span></li>
+                    <li><i class="bi bi-check2-circle"></i> <span>Eventos culturales,artísticos y deportivos.</span></li>
                   </ul>
-                  <p>
+                  <!--<p>
                     Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
                     velit esse cillum dolore eu fugiat nulla pariatur
-                  </p>
+                  </p>-->
                 </div>
               </div>
             </div><!-- End Slider item -->
@@ -227,23 +228,23 @@
                   <img src="assets/img/Miotato/f.jpg" class="img-fluid" alt="">
                 </div>
                 <div class="col-lg-6 pt-4 pt-lg-0 content">
-                  <h3>Private Parties</h3>
+                  <h3>Estilos de Menú</h3>
                   <div class="price">
-                    <p><span>$290</span></p>
+                    <!--<p><span>$290</span></p>-->
                   </div>
                   <p class="fst-italic">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-                    magna aliqua.
+                    Con Luhum tendrás una amplia variedad de menús que se adapten a tu evento, o de traer una idea previa nos adaptamos a ella.
                   </p>
                   <ul>
-                    <li><i class="bi bi-check2-circle"></i> <span>Ullamco laboris nisi ut aliquip ex ea commodo consequat.</span></li>
-                    <li><i class="bi bi-check2-circle"></i> <span>Duis aute irure dolor in reprehenderit in voluptate velit.</span></li>
-                    <li><i class="bi bi-check2-circle"></i> <span>Ullamco laboris nisi ut aliquip ex ea commodo consequat.</span></li>
+                      <li><i class="bi bi-check2-circle"></i> <span>Estilo Clásico/Formal.</span></li>
+                      <li><i class="bi bi-check2-circle"></i> <span>Estilo Buffet.</span></li>
+                      <li><i class="bi bi-check2-circle"></i> <span>Estilo Cocktail(Cócteles y Aperitivos).</span></li>
+                      <li><i class="bi bi-check2-circle"></i> <span>Estilo Barbacoa(BBQ) y Estilo Picnic Gourmet.</span></li>
                   </ul>
-                  <p>
+                  <!--<p>
                     Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
                     velit esse cillum dolore eu fugiat nulla pariatur
-                  </p>
+                  </p>-->
                 </div>
               </div>
             </div><!-- End Slider item -->
@@ -251,26 +252,26 @@
             <div class="swiper-slide">
               <div class="row gy-4 event-item">
                 <div class="col-lg-6">
-                  <img src="assets/img/Miotato/d.jpg" class="img-fluid" alt="">
+                  <img src="assets/img/Miotato/A9.jpg" class="img-fluid" alt="">
                 </div>
                 <div class="col-lg-6 pt-4 pt-lg-0 content">
-                  <h3>Custom Parties</h3>
+                  <h3>Estilos de Mobiliario y Equipos Tecnológicos </h3>
                   <div class="price">
-                    <p><span>$99</span></p>
+                    <!--<p><span>$99</span></p>-->
                   </div>
                   <p class="fst-italic">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-                    magna aliqua.
+                    Tenemos una amplia variedad de mobiliario para que cada detalle sea cautivador
                   </p>
                   <ul>
-                    <li><i class="bi bi-check2-circle"></i> <span>Ullamco laboris nisi ut aliquip ex ea commodo consequat.</span></li>
-                    <li><i class="bi bi-check2-circle"></i> <span>Duis aute irure dolor in reprehenderit in voluptate velit.</span></li>
-                    <li><i class="bi bi-check2-circle"></i> <span>Ullamco laboris nisi ut aliquip ex ea commodo consequat.</span></li>
+                      <li><i class="bi bi-check2-circle"></i> <span>Mesas Redonda o rectangulares,Sillas banquete.</span></li>
+                      <li><i class="bi bi-check2-circle"></i> <span>Bancos y sófas, mesas de cocktail.</span></li>
+                      <li><i class="bi bi-check2-circle"></i> <span>Sillas de comedor y banquete.</span></li>
+                      <li><i class="bi bi-check2-circle"></i> <span>Sillas Exterior, etc.</span></li>
                   </ul>
-                  <p>
+                  <!--<p>
                     Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
                     velit esse cillum dolore eu fugiat nulla pariatur
-                  </p>
+                  </p>-->
                 </div>
               </div>
             </div><!-- End Slider item -->
@@ -291,7 +292,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Galería</h2>
-        <div><span>Sabor que te</span> <span class="description-title">abraza</span></div>
+        <div><span>Experiencia</span> <span class="description-title">única</span></div>
       </div><!-- End Section Title -->
 
       <div class="container-fluid" data-aos="fade-up" data-aos-delay="100">
@@ -308,6 +309,14 @@
 
           <div class="col-lg-3 col-md-4">
             <div class="gallery-item">
+              <a href="assets/img/Miotato/A10.jpg" class="glightbox" data-gallery="images-gallery">
+                <img src="assets/img/Miotato/A10.jpg" alt="" class="img-fluid">
+              </a>
+            </div>
+          </div><!-- End Gallery Item -->
+
+          <div class="col-lg-3 col-md-4">
+            <div class="gallery-item">
               <a href="assets/img/Miotato/3(1).png" class="glightbox" data-gallery="images-gallery">
                 <img src="assets/img/Miotato/3(1).png" alt="" class="img-fluid">
               </a>
@@ -316,16 +325,8 @@
 
           <div class="col-lg-3 col-md-4">
             <div class="gallery-item">
-              <a href="assets/img/Miotato/4(1).png" class="glightbox" data-gallery="images-gallery">
-                <img src="assets/img/Miotato/4(1).png" alt="" class="img-fluid">
-              </a>
-            </div>
-          </div><!-- End Gallery Item -->
-
-          <div class="col-lg-3 col-md-4">
-            <div class="gallery-item">
-              <a href="assets/img/Miotato/cuer.jpg" class="glightbox" data-gallery="images-gallery">
-                <img src="assets/img/Miotato/cuer.jpg" alt="" class="img-fluid">
+              <a href="assets/img/Miotato/A12.jpg" class="glightbox" data-gallery="images-gallery">
+                <img src="assets/img/Miotato/A12.jpg" alt="" class="img-fluid">
               </a>
             </div>
           </div><!-- End Gallery Item -->
@@ -340,16 +341,16 @@
 
           <div class="col-lg-3 col-md-4">
             <div class="gallery-item">
-              <a href="assets/img/Miotato/R.jpg" class="glightbox" data-gallery="images-gallery">
-                <img src="assets/img/Miotato/R.jpg" alt="" class="img-fluid">
+              <a href="assets/img/Miotato/A13.jpg" class="glightbox" data-gallery="images-gallery">
+                <img src="assets/img/Miotato/A13.jpg" alt="" class="img-fluid">
               </a>
             </div>
           </div><!-- End Gallery Item -->
 
           <div class="col-lg-3 col-md-4">
             <div class="gallery-item">
-              <a href="assets/img/Miotato/mol.jpg" class="glightbox" data-gallery="images-gallery">
-                <img src="assets/img/Miotato/mol.jpg" alt="" class="img-fluid">
+              <a href="assets/img/Miotato/A14.jpg" class="glightbox" data-gallery="images-gallery">
+                <img src="assets/img/Miotato/A14.jpg" alt="" class="img-fluid">
               </a>
             </div>
           </div><!-- End Gallery Item -->
@@ -376,7 +377,7 @@
 
   <footer id="footer" class="footer dark-background">
 
-    <div class="container">
+    <!--<div class="container">
       <div class="row gy-3">
         <div class="col-lg-3 col-md-6 d-flex">
           <i class="bi bi-geo-alt icon"></i>
@@ -387,20 +388,20 @@
             <p></p>
           </div>
 
-        </div>
+        </div>-->
 
-        <div class="col-lg-3 col-md-6 d-flex">
-          <i class="bi bi-telephone icon"></i>
-          <div>
-            <h4>Contacto</h4>
-            <p>
-              <strong>Phone:</strong> <span>+1 5589 55488 55</span><br>
-              <strong>Email:</strong> <span>info@example.com</span><br>
-            </p>
+        <!--<div class="col-lg-3 col-md-6 d-flex">-->
+          <!--<i class="bi bi-telephone icon"></i>-->
+          <!--<div>-->
+            <!--<h4>Contacto</h4>-->
+            <!--<p>-->
+              <!--<strong>Phone:</strong> <span>+1 5589 55488 55</span><br>-->
+              <!--<strong>Correo:</strong> <span>info@example.com</span><br>-->
+            <!--</p>
           </div>
-        </div>
+        </div>-->
 
-        <div class="col-lg-3 col-md-6 d-flex">
+        <!--<div class="col-lg-3 col-md-6 d-flex">
           <i class="bi bi-clock icon"></i>
           <div>
             <h4>Horario</h4>
@@ -409,9 +410,9 @@
               <strong>Sunday</strong>: <span>Closed</span>
             </p>
           </div>
-        </div>
+        </div>-->
 
-        <div class="col-lg-3 col-md-6">
+        <!--<div class="col-lg-3 col-md-6">
           <h4>Síguenos</h4>
           <div class="social-links d-flex">
             <a href="#" class="twitter"><i class="bi bi-twitter-x"></i></a>
@@ -419,7 +420,7 @@
             <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
             <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
           </div>
-        </div>
+        </div>-->
 
       </div>
     </div>
